# PyKorg.py

./: README.md  __init__.py  atomic_data.py  pyproject.toml  species.py
PyKorg/: CubicSplines.py  __init__.py  abundances.py  atomic_data.py  constants.py  isotopic_data.py  read_statmech_quantities.py  species.py  statmech.py
Tests/: species.ipynb  temp  test_CubicSplines.ipynb  test_abundances.ipynb  test_read_statmech_quantities.ipynb
src/: __init__.py  atomic_data.py  species.py
